tests/rosetta/transpiler/FS/associative-array-creation.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/associative-array-creation.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Associative-array-creation' based on the file name 'associative-array-creation.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/associative-array-creation.fs(13,69): error FS0001: This expression was expected to have type
    int    
but here has type
    obj    

/workspace/mochi/tests/rosetta/transpiler/FS/associative-array-creation.fs(25,52): error FS0001: This expression was expected to have type
    int    
but here has type
    obj    

/workspace/mochi/tests/rosetta/transpiler/FS/associative-array-creation.fs(31,91): error FS0001: This expression was expected to have type
    int    
but here has type
    obj    

/workspace/mochi/tests/rosetta/transpiler/FS/associative-array-creation.fs(31,167): error FS0001: This expression was expected to have type
    int    
but here has type
    obj    

/workspace/mochi/tests/rosetta/transpiler/FS/associative-array-creation.fs(31,243): error FS0001: This expression was expected to have type
    int    
but here has type
    obj    
